# docstringer

./: README.md  demo.py  pyproject.toml  requirements-dev.txt
docstringer/: __init__.py  decorators.py  events.py  formatters.py
tests/: test_decorators.py
