[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "docstringer"
author = "Matt Gosden"
author-email = "mdgosden@gmail.com"
home-page = "https://pypi.org/project/docstringer/"
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python=">=3.6"
description-file="README.md"
requires=[]

